Menu's methods realocated and variable names change.